# deploy-docker-data-app-wk03

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README-EN.md  README-PT.md
