[tool.poetry]
name = "deploy-docker-data-app-wk03"
version = "0.1.0"
description = ""
authors = ["Lorenzo Uriel <lorenzo.uriel@geosiga.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.32.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
